--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@ app.controller('formCtrl', function($scope) {
               <div>
                 <form novalidate class='form-horizontal'>
                   <div class="form-group">
-                    <button class='btn btn-lg btn-warning' ng-click="clear_all()">CLEAR</button>
+                    <button class='btn btn-lg btn-danger' ng-click="clear_all()">Clear All</button>
                     <button class='btn btn-lg btn-info' ng-click="preload()">Preload</button>
                   </div>
                   <div class="form-group">
