--- a/web/index.html
+++ b/web/index.html
@@ -77,8 +77,8 @@ app.controller('formCtrl', function($scope) {
               <div>
                 <form novalidate class='form-horizontal'>
                   <div class="form-group">
-                    <button class='btn btn-lg btn-danger' ng-click="clear_all()">Clear All</button>
-                    <button class='btn btn-lg btn-info' ng-click="preload()">Preload</button>
+                    <button type='button' class='btn btn-lg btn-danger' ng-click="clear_all()">Clear All</button>
+                    <button type='button' class='btn btn-lg btn-info' ng-click="preload()">Preload</button>
                   </div>
                   <div class="form-group">
                     <input type="text" ng-model="student.name" Placeholder='Name' class='form-control' required='' autofocus><br>
