:godmode: Slight hack for gh pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/sempai/css/bootstrap.min.css">
 <!--<link rel="stylesheet" href="/css/narrow-jumbotron.css">-->
 <!--<script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js" integrity="sha384-XXXXXXXX" crossorigin="anonymous"></script>-->
 <body>
@@ -177,7 +177,7 @@ app.controller('formCtrl', function($scope) {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/sempai/js/ie10-viewport-bug-workaround.js"></script>
 
 
 </body>
